--- a/D.A.N.T/MavenProject/inicio/src/main/site/css/style.css
+++ b/D.A.N.T/MavenProject/inicio/src/main/site/css/style.css
@@ -62,8 +62,8 @@ body{
     border: none;
     border-radius: 10px;
     border-bottom: solid black 2px;
-    background-color: var(--color2);
     transition: .3s;
+    color: black;
 }
 
 .formulario form input:hover{
@@ -129,16 +129,16 @@ span{
 /* Parte da direita */
 
 .container-dir{
+    background-color: var(--color2);
     height: 380px;
-    border-end-end-radius: 10px;
-    border-start-end-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 0% 5% 5% 0%;
 }
 
 .container-dir img{
-    border-radius: 10px;
+    border-radius: 0% 5% 5% 0%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -160,15 +160,22 @@ span{
 .imagem{
     display: flex;
     justify-content: center;
-    width: 600px;
-    background-color: lightcoral;
+    width: 51%;
+}
+
+.imagem img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color2);
 }
 
 /* Direita dados */
 
 .dados{
-    background-color: lightcyan;
     padding: 40px;
+    background-color: var(--color2);
+    border-radius: 5%;
 }
 
 .dados .primeiros input{
@@ -178,6 +185,7 @@ span{
     border-radius: 10px;
     border: none;
     font-size: 15px;
+    border-bottom: 2px solid black;
     transition: .3s;
 }
 
@@ -243,14 +251,12 @@ span{
 
     .container-esq{
         padding: 40px;
-        background-color: lightcoral;
         height: 300px;
         border-radius: 10px;
         width: 80%;
     }
 
     .container-dir{
-        background-color: lightcoral;
         width: 100%;
         height: 380px;
         border-radius: 10px;
