--- a/D.A.N.T/MavenProject/inicio/src/main/site/css/all.css
+++ b/D.A.N.T/MavenProject/inicio/src/main/site/css/all.css
@@ -23,7 +23,7 @@ chat-bot{
     right: 0;
     margin: 10px;
     z-index: 1000;
-    background-color: aqua;
+    background-color: var(--color1);
     transition: .3s;
     border-radius: 5px;
 }
@@ -35,7 +35,8 @@ chat-bot{
     width: 20px;
     height: 20px;
     bottom: 10px;
-    right: 150px;
+    right: 112px;
+    cursor: pointer;
 }
 
 .empilhar:checked{
@@ -48,7 +49,7 @@ chat-bot{
 
 chat-bot i{
     cursor: pointer;
-    color: black;
+    color: white;
     transition: .3s;
     text-align: center;
     width: 100%;
@@ -56,19 +57,25 @@ chat-bot i{
 
 .container-chat{
     height: 250px;
+    width: 225px;
     display: flex;
     flex-direction: column;
     justify-content: end;
 }
 
 .container-chat .resp{
-    text-align: justify;
+    text-align: center;
     background-color: var(--color2);
-    width: 300px;
+    width: 80%;
+    height: 100%;
     font-size: 15px;
     border-radius: 5%;
     margin: 15px auto;
     overflow-y: scroll;
+}
+
+.container-chat .form label{
+    display: flex;
 }
 
 .container-chat .form input{
