--- a/Codigo/MavenProject/inicio/src/main/site/css/styleGamePage.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/styleGamePage.css
@@ -90,7 +90,7 @@ section .forum{
 
 .container-forum{
     margin: 10px 10px;
-    display: none;
+    display: flex;
     gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
