--- a/Codigo/MavenProject/inicio/src/main/site/css/styleSearch.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/styleSearch.css
@@ -75,10 +75,159 @@
     transition: .10s;
 }
 
-.game:hover{
-    transform: scale(1.01);
+/*rgb*/
+
+@keyframes rgb {
+    0% {
+        box-shadow: 
+            0 0 0 0.1em rgb(255, 0, 0),
+            0 0 0 0.2em rgb(255, 85, 0),
+            0 0 0 0.3em rgb(255, 170, 0),
+            0 0 0 0.4em rgb(255, 255, 0),
+            0 0 0 0.5em rgb(170, 255, 0),
+            0 0 0 0.6em rgb(85, 255, 0),
+            0 0 0 0.7em rgb(0, 255, 0),
+            0 0 0 0.8em rgb(0, 255, 85),
+            0 0 0 0.9em rgb(0, 255, 170),
+            0 0 0 1em rgb(0, 255, 255);
+    }
+    10% {
+        box-shadow: 
+        0 0 0 0.1em rgb(255, 85, 0),
+        0 0 0 0.2em rgb(255, 170, 0),
+        0 0 0 0.3em rgb(255, 255, 0),
+        0 0 0 0.4em rgb(170, 255, 0),
+        0 0 0 0.5em rgb(85, 255, 0),
+        0 0 0 0.6em rgb(0, 255, 0),
+        0 0 0 0.7em rgb(0, 255, 85),
+        0 0 0 0.8em rgb(0, 255, 170),
+        0 0 0 0.9em rgb(0, 255, 255),
+        0 0 0 1em rgb(255, 0, 0);
+    }
+    20% {
+        box-shadow: 
+        0 0 0 0.1em rgb(255, 170, 0),
+        0 0 0 0.2em rgb(255, 255, 0),
+        0 0 0 0.3em rgb(170, 255, 0),
+        0 0 0 0.4em rgb(85, 255, 0),
+        0 0 0 0.5em rgb(0, 255, 0),
+        0 0 0 0.6em rgb(0, 255, 85),
+        0 0 0 0.7em rgb(0, 255, 170),
+        0 0 0 0.8em rgb(0, 255, 255),
+        0 0 0 0.9em rgb(255, 0, 0),
+        0 0 0 1em rgb(255, 85, 0);
+    }
+    30% {
+        box-shadow: 
+        0 0 0 0.1em rgb(255, 255, 0),
+        0 0 0 0.2em rgb(170, 255, 0),
+        0 0 0 0.3em rgb(85, 255, 0),
+        0 0 0 0.4em rgb(0, 255, 0),
+        0 0 0 0.5em rgb(0, 255, 85),
+        0 0 0 0.6em rgb(0, 255, 170),
+        0 0 0 0.7em rgb(0, 255, 255),
+        0 0 0 0.8em rgb(255, 0, 0),
+        0 0 0 0.9em rgb(255, 85, 0),
+        0 0 0 1em rgb(255, 170, 0);
+    }
+    40% {
+        box-shadow: 
+        0 0 0 0.1em rgb(170, 255, 0),
+        0 0 0 0.2em rgb(85, 255, 0),
+        0 0 0 0.3em rgb(0, 255, 0),
+        0 0 0 0.4em rgb(0, 255, 85),
+        0 0 0 0.5em rgb(0, 255, 170),
+        0 0 0 0.6em rgb(0, 255, 255),
+        0 0 0 0.7em rgb(255, 0, 0),
+        0 0 0 0.8em rgb(255, 85, 0),
+        0 0 0 0.9em rgb(255, 170, 0),
+        0 0 0 1em rgb(255, 255, 0);
+    }
+    50% {
+        box-shadow: 
+        0 0 0 0.1em rgb(85, 255, 0),
+        0 0 0 0.2em rgb(0, 255, 0),
+        0 0 0 0.3em rgb(0, 255, 85),
+        0 0 0 0.4em rgb(0, 255, 170),
+        0 0 0 0.5em rgb(0, 255, 255),
+        0 0 0 0.6em rgb(255, 0, 0),
+        0 0 0 0.7em rgb(255, 85, 0),
+        0 0 0 0.8em rgb(255, 170, 0),
+        0 0 0 0.9em rgb(255, 255, 0),
+        0 0 0 1em rgb(170, 255, 0);
+    }
+    60% {
+        box-shadow: 
+        0 0 0 0.1em rgb(0, 255, 0),
+        0 0 0 0.2em rgb(0, 255, 85),
+        0 0 0 0.3em rgb(0, 255, 170),
+        0 0 0 0.4em rgb(0, 255, 255),
+        0 0 0 0.5em rgb(255, 0, 0),
+        0 0 0 0.6em rgb(255, 85, 0),
+        0 0 0 0.7em rgb(255, 170, 0),
+        0 0 0 0.8em rgb(255, 255, 0),
+        0 0 0 0.9em rgb(170, 255, 0),
+        0 0 0 1em rgb(85, 255, 0);
+    }
+    70% {
+        box-shadow: 
+        0 0 0 0.1em rgb(0, 255, 85),
+        0 0 0 0.2em rgb(0, 255, 170),
+        0 0 0 0.3em rgb(0, 255, 255),
+        0 0 0 0.4em rgb(255, 0, 0),
+        0 0 0 0.5em rgb(255, 85, 0),
+        0 0 0 0.6em rgb(255, 170, 0),
+        0 0 0 0.7em rgb(255, 255, 0),
+        0 0 0 0.8em rgb(170, 255, 0),
+        0 0 0 0.9em rgb(85, 255, 0),
+        0 0 0 1em rgb(0, 255, 0);
+    }
+    80% {
+        box-shadow: 
+        0 0 0 0.1em rgb(0, 255, 170),
+        0 0 0 0.2em rgb(0, 255, 255),
+        0 0 0 0.3em rgb(255, 0, 0),
+        0 0 0 0.4em rgb(255, 85, 0),
+        0 0 0 0.5em rgb(255, 170, 0),
+        0 0 0 0.6em rgb(255, 255, 0),
+        0 0 0 0.7em rgb(170, 255, 0),
+        0 0 0 0.8em rgb(85, 255, 0),
+        0 0 0 0.9em rgb(0, 255, 0),
+        0 0 0 1em rgb(0, 255, 85);
+    }
+    90% {
+        box-shadow: 
+        0 0 0 0.1em rgb(0, 255, 255),
+        0 0 0 0.2em rgb(255, 0, 0),
+        0 0 0 0.3em rgb(255, 85, 0),
+        0 0 0 0.4em rgb(255, 170, 0),
+        0 0 0 0.5em rgb(255, 255, 0),
+        0 0 0 0.6em rgb(170, 255, 0),
+        0 0 0 0.7em rgb(85, 255, 0),
+        0 0 0 0.8em rgb(0, 255, 0),
+        0 0 0 0.9em rgb(0, 255, 85),
+        0 0 0 1em rgb(0, 255, 170);
+    }
+    100% {
+        box-shadow: 
+        0 0 0 0.1em rgb(255, 0, 0),
+        0 0 0 0.2em rgb(255, 85, 0),
+        0 0 0 0.3em rgb(255, 170, 0),
+        0 0 0 0.4em rgb(255, 255, 0),
+        0 0 0 0.5em rgb(170, 255, 0),
+        0 0 0 0.6em rgb(85, 255, 0),
+        0 0 0 0.7em rgb(0, 255, 0),
+        0 0 0 0.8em rgb(0, 255, 85),
+        0 0 0 0.9em rgb(0, 255, 170),
+        0 0 0 1em rgb(0, 255, 255);
+    }
 }
 
+.game:hover
+{
+    animation: rgb .1s infinite linear;
+    border:  10px solid transparent;
+}
 
 /* Ver mais itens */
 
