--- a/Codigo/MavenProject/inicio/src/main/site/css/style.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/style.css
@@ -8,10 +8,29 @@
     --color1: rgb(20, 20, 20);
     --color2: white;
     --color3: rgb(128, 128, 128);
+
+    --vermelho-escuro: #FF0000;
+    --vermelho-profundo: #CC0000;
+    --vermelho-intenso: #DD3333;
+  
+    --preto: #000000;
+    --preto-profundo: #111111;
+    --preto-rico: #333333;
+  
+    --cinza-escuro: #333333;
+    --cinza-grafite: #555555;
+    --cinza-carvão: #222222;
+    --cinza-claro: #CCCCCC;
+  
+    --azul-escuro: #0000FF;
+    --azul-profundo: #000099;
+    --azul-oceano: #003366;
+  
+    --amarelo: #FFFF00;
 }
 
 body{
-    background-color: var(--color3);
+    background-color: var(--cinza-carvão);
 }
 
 /* root */
@@ -42,6 +61,7 @@ body{
 .Login h1{
     font-size: 40px;
     text-align: center;
+    border-bottom: solid black 2px;
 }
 
 .formulario{
@@ -79,14 +99,14 @@ body{
 .submit input{
     width: 150px;
     cursor: pointer;
-    background-color: var(--color3);
+    background-color: var(--cinza-escuro);
+    color: var(--color2);
     padding: 10px;
     text-align: center;
     border-radius: 10px;
     font-size: small;
     font-weight: bold;
     transition: .3s;
-    color: black;
     border: none;
     transition: .3s;
 }
@@ -103,7 +123,8 @@ body{
 .button h3{
     width: 150px;
     cursor: pointer;
-    background-color: white;
+    background-color: var(--cinza-escuro);
+    color: var(--color2);
     padding: 10px;
     text-align: center;
     border-radius: 10px;
@@ -129,7 +150,7 @@ span{
 /* Parte da direita */
 
 .container-dir{
-    background-color: var(--color2);
+    background-color: var(--cinza-claro);
     height: 380px;
     display: flex;
     justify-content: center;
