--- a/Codigo/MavenProject/inicio/src/main/site/css/perfil.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/perfil.css
@@ -127,11 +127,13 @@
 /* Sim ou nao */
 
 .certeza{
+    display: none;
     background-color: var(--color2);
+    border-radius: 5px;
+    backdrop-filter: blur(10px);
     position: absolute;
     margin: 300px auto;
     padding: 20px;
-    display: none;
 }
 
 .opcoes{
