--- a/Codigo/MavenProject/inicio/src/main/site/css/all.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/all.css
@@ -110,7 +110,7 @@ chat-bot i{
     background-color: var(--cinza-claro);
     display: flex;
     justify-content: space-between;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 .links ul{
@@ -145,7 +145,7 @@ chat-bot i{
 
 .container-navegar .esquerda a{
     display: flex;
-    justify-content: center;
+    margin-left: 10px;
 }
 
 .container-navegar .esquerda a img{ 
@@ -168,6 +168,10 @@ chat-bot i{
 .links ul li{
     padding: 20px;
     transition: .3s;
+}
+
+.links ul li a{
+    font-size: 15px;
 }
 
 .links ul li:hover{
@@ -317,7 +321,7 @@ footer{
     background-color: var(--preto);
 }
 
-.container-footer .quem-somos h3{
+.container-footer .quem-somos .imagem{
     margin-bottom: 15px;
 }
 
