--- a/Codigo/MavenProject/inicio/src/main/site/css/perfil.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/perfil.css
@@ -4,7 +4,6 @@
     --color3: rgb(128, 128, 128);
 }
 
-
 /* Section */
 
 .container-dados {
@@ -158,6 +157,34 @@
 }
 
 .sim:hover, .nao:hover{
+    transform: scale(1.05);
+}
+
+.desejo_salvar{
+    display: none;
+    background-color: var(--color2);
+    border-radius: 5px;
+    backdrop-filter: blur(10px);
+    position: absolute;
+    margin: 300px auto;
+    padding: 20px;
+}
+
+.quero, .nao_quero{
+    padding: 10px;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.nao_quero{
+    color: var(--vermelho-escuro);
+}
+
+.quero{
+    color: green;
+}
+
+.quero:hover, .nao_quero:hover{
     transform: scale(1.05);
 }
 
