--- a/Codigo/MavenProject/inicio/src/main/site/css/styleGamePage.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/styleGamePage.css
@@ -42,7 +42,7 @@
     padding: 5px;
     background-color: var(--color2);
     text-align:justify;
-    border-radius: 5%;
+    border-radius: 5px;
 }
 
 .container-dir .descricao{
