--- a/Codigo/MavenProject/inicio/src/main/site/css/styleGamePage.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/styleGamePage.css
@@ -53,6 +53,16 @@
     margin-bottom: 20px;
 }
 
+.container-baixo{
+    background-color: var(--color2);
+    padding: 10px;
+    width: 80%;
+    margin: auto;
+    border-radius: 10px;
+    font-size: 15px;
+    text-align: justify;
+}
+
 /* Forum botão */
 
 .forum{
