--- a/Codigo/MavenProject/inicio/src/main/site/css/perfil.css
+++ b/Codigo/MavenProject/inicio/src/main/site/css/perfil.css
@@ -91,7 +91,7 @@
 .container-deletar {
     margin-top: 20px;
     justify-content: center;
-    margin-bottom: 100px;
+    margin-bottom: 25px;
     display: flex;
     gap: 20px;
 }
@@ -120,6 +120,23 @@
 }
 
 .container-deletar .salvar:hover {
+    transform: scale(1.05);
+}
+
+.premium {
+    background-color: var(--color2);
+    padding: 10px;
+    border-radius: 10px;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    color: var(--amarelo);
+    cursor: pointer;
+    transition: .3s;
+    margin-bottom: 10px;
+}
+
+.premium:hover {
     transform: scale(1.05);
 }
 
@@ -185,6 +202,34 @@
 }
 
 .quero:hover, .nao_quero:hover{
+    transform: scale(1.05);
+}
+
+.assinar_premium{
+    display: none;
+    background-color: var(--color2);
+    border-radius: 5px;
+    backdrop-filter: blur(10px);
+    position: absolute;
+    margin: 300px auto;
+    padding: 20px;
+}
+
+.desejo, .nao_desejo{
+    padding: 10px;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.nao_desejo{
+    color: var(--vermelho-escuro);
+}
+
+.desejo{
+    color: green;
+}
+
+.desejo:hover, .nao_desejo:hover{
     transform: scale(1.05);
 }
 
